<resources>
    <string name="app_name">Fox Finder</string>
    <string name="hintemail"><font color="grey" size="20">Enter Your Email</font></string>
    <string name="hintpassword"><font color="grey" size="20">Enter Your Password</font></string>
    <string name="hintconfirmpass"><font color="grey" size="20">Re Enter Your Password</font></string>
    <string name="hintphoneNo"><font color="grey" size="20">Enter Your PhoneNo</font></string>
    <string name="hintname"><font color="grey" size="20">Enter Your Name</font></string>
    <string name="hintitemname"><font color="grey" size="15">Enter the Name of your item</font></string>
    <string name="hintitemdesc"><font color="grey" size="15">Describe the Item you have Lost/Found</font></string>
    <string name="profileedit"><font color="#fec234" size="40"><b><u>Profile Edit</u></b></font></string>
    <string name="profile"><font color="#fec234" size="40"><b><u>Profile</u></b></font></string>
    <string name="itemtype"><font color="black" size="25"><b><u>Type of Item: </u></b></font></string>
    <string name="weelcometitle"><font color="black" size="20"><b><u>Welcome to the Fox Finder </u></b></font></string>
    //Dashboard

    <string name="title_activity_dashboard">dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Danish</string>
    <string name="nav_header_subtitle">ahmed.danish800@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_about">About</string>
    <string name="menu_signout">SignOut</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="btnhome">Home</string>
    <string name="btnlost">Lost</string>
    <string name="btnfound">Found</string>
    <string name="search">Enter anything you want to search</string>

    <string name="lostitem"><font color="#fec234" size="25"><b><u>Lost Items </u></b></font></string>
    <string name="founditem"><font color="#fec234" size="25"><b><u>Found Items </u></b></font></string>

</resources>