<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".lost"
    android:background="@color/body">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="#fec234">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/lost"
            android:layout_width="210dp"
            android:layout_height="match_parent"
            android:text="@string/btnlost"
            android:background="@drawable/btnlost"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"></androidx.appcompat.widget.AppCompatButton>
        <Button
            android:id="@+id/found"
            android:layout_width="210dp"
            android:layout_height="match_parent"
            android:background="@color/yellow"
            android:text="@string/btnfound"
            android:layout_gravity="right"
            android:gravity="center"
            android:textColor="@color/white"></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/body"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/lostitem"
            android:textAllCaps="true"
            android:gravity="center"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:id="@+id/rclview2"
        >

    </androidx.recyclerview.widget.RecyclerView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lostPage"
        />



</LinearLayout>

