<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#37435b"
    tools:context=".signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_margin="5dp"
            android:layout_centerInParent="true"
            android:src="@drawable/logo"
            app:shapeAppearanceOverlay="@style/roundImageview"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:textAllCaps="true"
            android:text="SignUp"
            android:textColor="#fec234"
            android:textSize="50sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/name"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:background="@drawable/edittextgradient"
            android:hint="@string/hintname"
            android:textColor="@color/black"
            android:textSize="20sp" />



        <EditText
            android:id="@+id/email"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:layout_marginTop="30dp"
            android:background="@drawable/edittextgradient"
            android:hint="@string/hintemail"
            android:textColor="@color/black"
            android:textSize="20sp" />




        <EditText
            android:id="@+id/password"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:inputType="textPassword"
            android:layout_marginTop="30dp"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:background="@drawable/edittextgradient"
            android:hint="@string/hintpassword"
            android:textColor="@color/black"
            android:textSize="20sp" />



        <EditText
            android:id="@+id/confirmpass"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:layout_marginTop="30dp"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:background="@drawable/edittextgradient"
            android:hint="@string/hintconfirmpass"
            android:textColor="@color/black"
            android:textSize="20sp" />




        <EditText
            android:id="@+id/phone"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="30dp"
            android:drawableLeft="@drawable/ic_baseline_call_24"
            android:background="@drawable/edittextgradient"
            android:hint="@string/hintphoneNo"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_gradiant"
            android:text="Sign Up"
            android:textColor="#333333"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_gradiant"
            android:text="Already have an Account?"
            android:textColor="#333333"
            android:textSize="15sp" />


    </LinearLayout>
</RelativeLayout>